Just adding features :)

--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,8 @@
 
 .reviews-container {
   background-color: #EE6D73; 
-  margin-top: -42px;
+  margin: 0;
+  padding: 0;
 }
 
 #review-card {
@@ -61,4 +62,7 @@ form {
 
 #review-list-title {
 text-align: center;
+margin: 0;
+padding: 0;
 }
+
